--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script src="https://res.wx.qq.com/open/js/cloudbase/1.1.0/cloud.js"></script>
 	<script>
-     uni.requestPayment({
+     wx.requestPayment({
               provider: 'wxpay',
               timeStamp: '1712325216',
               nonceStr: 'EKGAKMBELZIGC7CE',
