--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>
-            <%= htmlWebpackPlugin.options.title %>
+            测试
         </title>
         <!-- Open Graph data -->
         <!-- <meta property="og:title" content="Title Here" /> -->
@@ -29,7 +29,7 @@
     
     <!-- 可更换，两个SDK都可使用最近更新的版本 -->
     <!-- 微信 JS-SDK 如果不需要兼容小程序，可以不引用 JS 文件。 两个文件同时引入时，微信的需要在前-->
-    <script type="text/javascript" src="//res.wx.qq.com/open/js/jweixin-1.4.0.js"></script>  
+    <script type="text/javascript" src="http//res.wx.qq.com/open/js/jweixin-1.4.0.js"></script>  
     <!-- uni 的 SDK，必须引用。 -->  
     <script type="text/javascript" src="https://js.cdn.aliyun.dcloud.net.cn/dev/uni-app/uni.webview.1.5.2.js"></script>
     
