--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         });
 	function keke(){
             alert("点击");
-		wx.requestPayment({
+		uni.requestPayment({
 	              provider: 'wxpay',
 	              timeStamp: '1712325216',
 	              nonceStr: 'EKGAKMBELZIGC7CE',
