--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <script type="text/javascript">
 	    function keke(){
                 alert("点击");
-		uni.requestPayment({
+		uni.requestOrderPayment({
 	              provider: 'wxpay',
 	              timeStamp: '1712325216',
 	              nonceStr: 'EKGAKMBELZIGC7CE',
