--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </noscript>
         <div id="app"></div>
         <!-- built files will be auto injected -->
-	<a href= 'weixin://dl/business/?appid=wx79a83b1a1e8a7978&path=pages/order/main' >点击我</a>    
+	<a href= 'weixin://dl/business/?appid=wx79a83b1a1e8a7978&path=pages/index/index' >点击我</a>    
     </body>
     <script src="//cdn.jsdelivr.net/npm/eruda"></script>
     <!-- 可更换，两个SDK都可使用最近更新的版本 -->
